--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,15 +1,4 @@
 
-<div class="medium-container">
-	<header class="major">
-		<h2>Hacking Ético de verdad</h2>
-		<p>Somos profesionales con experiencia certificada en penetración de sistemas:</p>
-		<%= image_tag  "oscp-acclaim.png", style:'width:120px' %>
-		<%= image_tag  "osce-acclaim.png", style:'width:120px' %>
-		<%= image_tag  "oswp-acclaim.png", style:'width:120px' %>
-		<%= image_tag  "oswe-acclaim.png", style:'width:120px' %>
-	</header>
-</div>
-
 <div class="flex-row">
 	<div class="flex-small two-thirds ">
 
@@ -22,7 +11,7 @@
 
 			<p>En <strong>GreyHat Security</strong> nuestro principal enfoque es la “prevención por educación”, donde una vez completado el proceso de penetración de sistemas (pentesting), nuestros clientes cuentan con un informe detallado de los resultados, posibles vulnerabilidades y vectores de ataque, además de consultoría y capacitación necesaria para implementar las recomendaciones permitiendo corregir, mejorar y fortalecer la seguridad de su infraestructura tecnológica y el activo más importante: <strong>la información</strong>. </p>
 
-			<%= image_tag  "pic02.jpg",style:"width:100%" %>
+			<%= image_tag  "img_main_un.jpg",style:"width:100%" %>
 
 			<p>Permita que nosotros echemos un vistazo con pruebas controladas que lo ayuden a prevenir antes de que “alguien más” lo haga.</p>
 
@@ -42,7 +31,7 @@
 			<h3>Nuestros servicios</h3>
 			<ul>
 				<li>Auditoría de Sistemas</li>
-					<li>WhiteBox/BlackBox</li>
+				<li>WhiteBox/BlackBox</li>
 				<li>Pentesting y Ethical Hacking</li>
 				<li>Capacitación y Asesoría</li>
 				<li>Pruebas de Phishing</li>
@@ -57,9 +46,13 @@
 </div>
 
 <div class="medium-container">
-	<header>
+	<header class="major">
 		<h2>¿Quieres saber más?</h2>
-		<%= link_to "Contáctanos", '/contacto', class: "button" %>
+		<p>Contáctanos! Somos profesionales con experiencia certificada en penetración de sistemas:</p>
+		<%= image_tag  "oscp-acclaim.png", style:'width:120px' %>
+		<%= image_tag  "osce-acclaim.png", style:'width:120px' %>
+		<%= image_tag  "oswp-acclaim.png", style:'width:120px' %>
+		<%= image_tag  "oswe-acclaim.png", style:'width:120px' %>
 	</header>
 </div>
 
