--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *
  *= require_tree .
  *= require_self
+ *= require font-awesome
  */
 
- @import '@fortawesome/fontawesome-free/css/all.min.css';
  @import './primitive/main.css';
