--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,6 +1,7 @@
 
-<div class="medium-container">
+<h2>Contacto</h2>
+
 <p id="notice"><%= notice %></p>
 
 <%= render 'form', contact: @contact %>
-</div>
+
