--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -27,4 +27,12 @@
 	<br><br>
 	Pro-activo, eficiente y eficaz en la ejecución de proyectos, con extensa experiencia trabajando en grupos y entornos colaborativos. 
 	A dictado numerosas conferencias en temas como programación de aplicaciones eficientes, demostraciones en vivo de hacking a sistemas remotos, entre otros. Una de las más exitosas: <em>“Paranoia, como sobrevivir a los peligros del Internet”</em>, demostraba en vivo el proceso desde identificación de un objetivo, ingeniería social necesaria, hasta obtener acceso total al servidor remoto. 
+
+
 </p>
+			<div class="flex-row vertical-center">
+			<%= image_tag  "oscp-acclaim.png", style:'width:120px' %>
+				<%= image_tag  "osce-acclaim.png", style:'width:120px' %>
+				<%= image_tag  "oswp-acclaim.png", style:'width:120px' %>
+				<%= image_tag  "oswe-acclaim.png", style:'width:120px' %>
+			</div>
