--- a/app/assets/stylesheets/primitive/main.css
+++ b/app/assets/stylesheets/primitive/main.css
@@ -799,15 +799,15 @@ dd {
 }
 
 .button:hover, a.button:hover, button:hover, [type=submit]:hover, [type=reset]:hover, [type=button]:hover {
-  border: 1px solid #0250bc;
-  background: #0250bc;
+  border: 1px solid #0246a2;
+  background: #0246a2;
   color: #ffffff;
   text-decoration: none;
 }
 
 .button:focus, .button:active, a.button:focus, a.button:active, button:focus, button:active, [type=submit]:focus, [type=submit]:active, [type=reset]:focus, [type=reset]:active, [type=button]:focus, [type=button]:active {
-  border: 1px solid #0250bc;
-  background: #0250bc;
+  border: 1px solid #0246a2;
+  background: #0246a2;
   color: #ffffff;
   text-decoration: none;
 }
@@ -1035,10 +1035,19 @@ caption {
  body {
   background-color: #121212;
   color:#fff;
+  color: rgba(255,255,255, 0.8);
   text-align: justify;
+  font-family: 'Rubik';
+  font-size:18px;
+}
+
+#main{
+  background-color: #212121;
+  padding:10px 20px 20px 20px;
 }
 h1, h2, h3 {
   color:#d3d3d3;
+  font-family: 'Montserrat';
 }
 div.logo img{
   width:300px;
@@ -1057,7 +1066,7 @@ input,textarea {
   padding: 0;
   overflow: hidden;
   background-color: #333;
-  border-radius: 5px;
+  border-radius: 5px 5px 0 0;
 }
 
 #nav li {
@@ -1076,8 +1085,27 @@ input,textarea {
   background-color: #111;
 }
 
-.active {
-  background-color: #0250bc;
+a {
+  color: #6494fc;
+} 
+a:hover{
+  color: #0366ee;
+} 
+
+.active{
+  background-color: #0246a2;
+}
+
+a.button{
+  background-color: #0246a2;
+}
+a.button:hover{
+  background-color: #0366ee;
+}
+
+
+.post_list {
+  margin-bottom: 20px;
 }
 
 /*
@@ -1085,8 +1113,8 @@ input,textarea {
  */
 
 #footer div {
-  margin-top:20px;
-  padding:10px;
+  
+  padding: 10px 0 10px 0;
 }
 .icon_large {
   cursor: pointer;
@@ -1101,7 +1129,7 @@ input,textarea {
 
 .copyfoot {
     background-color: #333;
-    border-radius: 5px;
+    border-radius:  0 0 5px 5px;
 }
 
 /*
