--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -10,52 +10,38 @@
 			</header>
 
 			<p>En <strong>GreyHat Security</strong> nuestro principal enfoque es la “prevención por educación”, donde una vez completado el proceso de penetración de sistemas (pentesting), nuestros clientes cuentan con un informe detallado de los resultados, posibles vulnerabilidades y vectores de ataque, además de consultoría y capacitación necesaria para implementar las recomendaciones permitiendo corregir, mejorar y fortalecer la seguridad de su infraestructura tecnológica y el activo más importante: <strong>la información</strong>. </p>
+				<p>Permita que nosotros echemos un vistazo con pruebas controladas que lo ayuden a prevenir antes de que “alguien más” lo haga.</p>
+				<%= image_tag  "img_main_un.jpg",style:"width:100%" %>
+				<span style="font-size:x-small;color:grey"><em>Photo by Clint Patterson on Unsplash</em></span>
 
-			<%= image_tag  "img_main_un.jpg",style:"width:100%" %>
 
-			<p>Permita que nosotros echemos un vistazo con pruebas controladas que lo ayuden a prevenir antes de que “alguien más” lo haga.</p>
 
-		</article>
+			</article>
+		</div>
+		<div class="flex-small one-third">
+
+			<section>
+				<h3>¿Capacitación Gratuita?</h3>
+				<p>Brindamos charlas y capacitación acerca de técnicas de protección efectivas para las amenazas del día a día, aseguramiento, <a href="https://www.greyhat.cl/posts/como-mejorar-tu-seguridad-y-privacidad-en-linea-rapidamente">buenas prácticas</a> para nuestra vida digital, entre otros.</p>
+				<footer>
+					<%= link_to "Quiero una charla gratuita", '/contacto', class: "button" %>
+				</footer>
+			</section>
+
+			<section>
+				<h3>Nuestros servicios</h3>
+				<ul>
+					<li>Auditoría de Sistemas</li>
+					<li>WhiteBox/BlackBox</li>
+					<li>Pentesting y Ethical Hacking</li>
+					<li>Capacitación y Asesoría</li>
+					<li>Pruebas de Phishing</li>
+				</ul>
+				<footer>
+					<%= link_to "Servicios", '/servicios', class: "button" %>
+
+				</footer>
+			</section>
+
+		</div>
 	</div>
-	<div class="flex-small one-third">
-
-		<section>
-			<h3>¿Capacitación Gratuita?</h3>
-			<p>Brindamos charlas y capacitación acerca de técnicas de protección efectivas para las amenazas del día a día, aseguramiento, <a href="https://www.greyhat.cl/posts/como-mejorar-tu-seguridad-y-privacidad-en-linea-rapidamente">buenas prácticas</a> para nuestra vida digital, entre otros.</p>
-			<footer>
-				<%= link_to "Quiero una charla gratuita", '/contacto', class: "button" %>
-			</footer>
-		</section>
-
-		<section>
-			<h3>Nuestros servicios</h3>
-			<ul>
-				<li>Auditoría de Sistemas</li>
-				<li>WhiteBox/BlackBox</li>
-				<li>Pentesting y Ethical Hacking</li>
-				<li>Capacitación y Asesoría</li>
-				<li>Pruebas de Phishing</li>
-			</ul>
-			<footer>
-				<%= link_to "Servicios", '/servicios', class: "button" %>
-
-			</footer>
-		</section>
-
-	</div>
-</div>
-
-<div class="medium-container">
-	<header class="major">
-		<h2>¿Quieres saber más?</h2>
-		<p>Contáctanos! Somos profesionales con experiencia certificada en penetración de sistemas:</p>
-		<%= image_tag  "oscp-acclaim.png", style:'width:120px' %>
-		<%= image_tag  "osce-acclaim.png", style:'width:120px' %>
-		<%= image_tag  "oswp-acclaim.png", style:'width:120px' %>
-		<%= image_tag  "oswe-acclaim.png", style:'width:120px' %>
-	</header>
-</div>
-
-
-
-
