feature: recatpcha in contacts, new link in dashboard

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -27,6 +27,10 @@
 
   </div>
 
+  <div class="field">
+    <%= recaptcha_tags theme: "dark" %>
+  </div>
+
   <div class="actions">
     <%= form.submit "Enviar" %>
   </div>
