--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,6 +2,7 @@
 
 <p id="notice"><%= notice %></p>
 
+<div><%= link_to "Contacts", contacts_url %></div>
 <div><%= link_to "Posts", posts_url %></div>
 
 <div>
