no justify, fixed photo copy

--- a/app/assets/stylesheets/primitive/main.css
+++ b/app/assets/stylesheets/primitive/main.css
@@ -1036,7 +1036,7 @@ caption {
   background-color: #121212;
   color:#fff;
   color: rgba(255,255,255, 0.8);
-  text-align: justify;
+  /*text-align: justify;*/
   font-family: 'Rubik';
   font-size:18px;
 }
