--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 
 		<div id="header" class="vertical-center logo">
 			<div><%= image_tag  "logo_white.png"%></div>
-		</div>	
+		<7/div>	
 
 		<%= render 'partials/navigation' %>
 
@@ -54,7 +54,7 @@
 			</div>
 
 			<div class="flex-row vertical-center" style="font-size:small;color:grey">
-				<em>Powered by&nbsp;<a href="https://taniarascia.github.io/primitive/">Primitive UI</a><br>Photo by Clint Patterson on Unsplash</em>
+				<em>Powered by&nbsp;<a href="https://taniarascia.github.io/primitive/">Primitive UI</a>
 			</div>
 
 		</div>
