--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 
 		<div id="header" class="vertical-center logo">
 			<div><%= image_tag  "logo_white.png"%></div>
-		<7/div>	
+		</div>	
 
 		<%= render 'partials/navigation' %>
 
