quick fix contacts and index

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -14,8 +14,7 @@
 	  y, en caso de ser requerido, la consultoría y capacitación necesaria para implementar las recomendaciones permitiendo
 	  corregir, mejorar y fortalecer la seguridad de su infraestructura tecnológica. </p>
 
-	  <%=image_tag url_for("img_main.jpg") %>
-
+	  <%=image_tag "img_main.jpg",style:"width:100%" %>
 
 	</article>
   </div>
