--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,18 +9,15 @@
         <h2>El Verdadero Ethical Hacking</h2>
       </header>
 
-      <p>En <strong>GreyHat Security</strong> nuestro principal enfoque es la “prevención por educación”. Nuestros 
-      clientes cuentan con informes detallado las vulnerabilidades y vectores de ataque encontrados en su plataforma.</p>
+      <p>En <strong>GreyHat Security</strong> proveemos <%= link_to "servicios", "/servicios" %> de pentesting con un
+      enfoque educativo, donde nuestros clientes cuentan con capacitación en prevención y corrección, además de un
+      informe detallado sobre los problemas encontrados en su plataforma.</p>
 
-      <%=image_tag "img_main.jpg",style:"width:100%" %>
-
-      <p>En caso de ser requerido, tambien brindamos la consultoría y capacitación necesaria para implementar las recomendaciones permitiendo
-      corregir, mejorar y fortalecer la seguridad de su infraestructura tecnológica. </p>
+      <%=image_tag "new_main.jpg",style:"width:100%" %>
 
       <header>
-        <h2>Ultimos articulos</h2>
+        <h2>Últimos artículos</h2>
       </header>
-
 
       <% Post.order("id DESC").all.take(3).each do |post| %>
 
@@ -51,7 +48,7 @@
 
     <section>
       <h3>¿Capacitación Gratuita?</h3>
-      <p>Brindamos charlas y capacitación acerca de técnicas de protección efectivas para las amenazas del día a día, aseguramiento, <a href="https://www.greyhat.cl/posts/como-mejorar-tu-seguridad-y-privacidad-en-linea-rapidamente">buenas prácticas</a> para nuestra vida digital, entre otros.</p>
+      <p>Ofrecemos charlas acerca de técnicas de protección efectivas para las amenazas del día a día y el cómo implementar <a href="https://www.greyhat.cl/posts/como-mejorar-tu-seguridad-y-privacidad-en-linea-rapidamente">buenas prácticas</a> para nuestra vida digital, entre otros temas.</p>
       <footer>
         <%= link_to "Quiero una charla gratuita", '/contacto', class: "button" %>
       </footer>
