all images rounded

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -13,7 +13,7 @@
       enfoque educativo, donde nuestros clientes cuentan con capacitación en prevención y corrección, además de un
       informe detallado sobre los problemas encontrados en su plataforma.</p>
 
-      <%=image_tag "new_main.jpg",style:"width:100%" %>
+      <%=image_tag "new_main.jpg",style:"width:100%;border-radius:5px;" %>
 
       <header>
         <h2>Últimos artículos</h2>
