--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -30,7 +30,7 @@
 
 <p>
 
-  <%= image_tag "avatar.jpg", style:"width:180px;border-radius:50%;margin-right:20px", align:'left' %>
+  <%= image_tag "avatar.jpg", style:"width:180px;border-radius:5px;margin-right:20px", align:'left' %>
   <strong>Alex Barrios</strong> / <em>Fundador</em><br>
   <a href="http://linkedin.com/in/alexbariv/" target="_blank"><%=fa_icon "linkedin"%></a>
   <br>
