--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,7 @@
     
     <div class="medium-container">
       <h3>Acerca del Autor</h3>
-      <%= image_tag "avatar.jpg", style:"width:96px;border-radius:5px;margin-right:20px", align:'left' %>
+      <%= image_tag "0.jpg", style:"width:96px;border-radius:5px;margin-right:20px", align:'left' %>
       <a href="http://linkedin.com/in/alexbariv/" target="_blank"><strong>Alex Barrios</strong></a><br>
       <p style="font-size:14px">
       Cuenta con más de 15 años de experiencia en distintos campos de las tecnologías de información, 
