--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,8 +22,9 @@
     
     <div class="medium-container">
       <h3>Acerca del Autor</h3>
-      <%= image_tag "0.jpg", style:"width:96px;border-radius:5px;margin-right:20px", align:'left' %>
+      <%= image_tag "0.jpg", style:"width:120px;border-radius:5px;margin-right:20px", align:'left' %>
       <a href="http://linkedin.com/in/alexbariv/" target="_blank"><strong>Alex Barrios</strong></a><br>
+      <a href="https://twitter.com/greyhat_se?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @greyhat_se</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       <p style="font-size:14px">
       Cuenta con más de 15 años de experiencia en distintos campos de las tecnologías de información, 
       ejerciendo principalmente como desarrollador fullstack, administrador de sistemas y asesor de seguridad informática certificado
