--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -15,7 +15,8 @@
     </strong>
 
     <div style="font-size:small">
-      <%= post.created_at.strftime("%d %b. %Y") %> | Lectura de <%= (post.body.scan(/\w+/).size/200)+1 %> minutos
+      <%= post.created_at.strftime("%d %b. %Y") %> <br>
+       Lectura de <%= (post.body.scan(/\w+/).size/200)+1 %> minutos
     </div>
 
 <!--
