--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,13 +2,12 @@
 
 <p>
   <strong>Greyhat Security</strong> surge con la visión de proveer servicios de Hacking Ético
-  incluyendo a su vez capacitación. La misión es proveer herramientas a nuestros clientes que
-  permitan prevenir y proteger el bien más preciado para cualquier individuo u organización:
-  <strong>la información</strong>.
+  y proveer herramientas a nuestros clientes que permitan prevenir y proteger el bien más preciado 
+  para cualquier individuo u organización:  <strong>la información</strong>.
   </p>
 
   <p>
-  Nuestra amplia experiencia en capacitación con modalidades a distancia y presenciales,
+  Nuestra amplia experiencia en consultoria con modalidades a distancia y presenciales,
   nos permite enfocarnos en la visión de ser una empresa "alternativa" de Hacking donde el
   principal objetivo sea compartir la mayor cantidad de conocimiento con nuestros clientes.
   </p>
