--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,9 +9,11 @@
         <h2>El Verdadero Ethical Hacking</h2>
       </header>
 
-      <p>En <strong>GreyHat Security</strong> proveemos <%= link_to "servicios", "/servicios" %> de pentesting con un
-      enfoque educativo, donde nuestros clientes cuentan con capacitación en prevención y corrección, además de un
-      informe detallado sobre los problemas encontrados en su plataforma.</p>
+      <p>En <strong>GreyHat Security</strong> proveemos <%= link_to "Servicios", "/servicios" %> de pentesting 
+      con un enfoque educativo, donde nuestros clientes cuentan con capacitación en prevención y corrección, 
+      además de un informe detallado sobre los problemas encontrados en su plataforma. <br/> <br/>
+      Puede encontrar en la sección <%= link_to "Artículos", "/articulos" %> nuestro material audiovisual, publicaciones e investigaciones recientes. 
+       </p>
 
       <%=image_tag "new_main.jpg",style:"width:100%;border-radius:5px;" %>
 
@@ -47,10 +49,10 @@
   <div class="flex-small one-third">
 
     <section>
-      <h3>¿Capacitación Gratuita?</h3>
-      <p>Ofrecemos charlas acerca de técnicas de protección efectivas para las amenazas del día a día y el cómo implementar <a href="https://www.greyhat.cl/posts/como-mejorar-tu-seguridad-y-privacidad-en-linea-rapidamente">buenas prácticas</a> para nuestra vida digital, entre otros temas.</p>
+      <h3>Conferencias &amp; Charlas</h3>
+      <p>Ofrecemos charlas gratuitas sobre técnicas de protección efectivas para las amenazas del día a día y el cómo implementar <a href="https://www.greyhat.cl/posts/como-mejorar-tu-seguridad-y-privacidad-en-linea-rapidamente">buenas prácticas</a> para nuestra vida digital, entre otros temas.</p>
       <footer>
-        <%= link_to "Quiero una charla gratuita", '/contacto', class: "button" %>
+        <%= link_to "Solicitud en línea", '/contacto', class: "button" %>
       </footer>
     </section>
 
