text updates, new logo, and more

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -3,9 +3,9 @@
 
 <p id="notice"><%= notice %></p>
 
-Para solicitud de charlas, capacitación y otros servicios, contáctanos en el siguiente formulario.
-Podemos indicarte un <strong>número para atención telefónica</strong> previa solicitud vía e-mail. <br><br>
-Además nos puedes contactar en Twitter a través de <a href="https://twitter.com/greyhat_se" target="_blank">@greyhat_se</a>.
+<p>Para solicitud de charlas, capacitación y otros servicios, contáctanos en el siguiente formulario.
+Podemos indicarte un <strong>número para atención telefónica</strong> previa solicitud vía e-mail. </p>
+
 
 <%= render 'form', contact: @contact %>
 
