--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,22 +1,13 @@
 <h2>Acerca de</h2>
 
-<p>
-  <strong>Greyhat Security</strong> surge con la visión de proveer servicios de Hacking Ético
-  y proveer herramientas a nuestros clientes que permitan prevenir y proteger el bien más preciado 
-  para cualquier individuo u organización:  <strong>la información</strong>.
-  </p>
 
-  <p>
-  Nuestra amplia experiencia en consultoria con modalidades a distancia y presenciales,
-  nos permite enfocarnos en la visión de ser una empresa "alternativa" de Hacking donde el
-  principal objetivo sea compartir la mayor cantidad de conocimiento con nuestros clientes.
-  </p>
+<p><strong>Greyhat</strong> surge con la visión de proveer servicios de desarrollo de aplicaciones 
+y Hacking Ético,  con herramientas que permitan a nuestros clientes  dar vida a sus ideas en 
+aplicaciones que puedan mantener y escalar, con la garantía de tener un producto seguro y confiable. </p>
 
-  <p>
-  Contamos con personal certificado y gran experiencia tanto laboral como didáctica, lo que nos
-  permite unificar un servicio de alto nivel en Hacking y Desarrollo así como capacitación y
-  transferencia de conocimiento.
-</p>
+<p>Contamos con personal certificado y gran experiencia tanto laboral como didáctica, 
+lo que nos permite unificar un servicio de alto nivel en Hacking y Desarrollo así como capacitación y 
+transferencia de conocimiento. </p>
 
 <div class="flex-row vertical-center">
   <%= image_tag  "oscp-acclaim.png", style:'width:120px' %>
@@ -32,19 +23,13 @@
   <%= image_tag "0.jpg", style:"width:140px;border-radius:5px;margin-right:20px", align:'left' %>
   <strong>Alex Barrios</strong> / <em>Fundador</em><br>
   <a href="http://linkedin.com/in/alexbariv/" target="_blank"><%=fa_icon "linkedin"%></a>
-  <br>
+  <p>
   Profesional con más de 15 años de experiencia en distintos campos de las tecnologías de
   información, con un sólido conocimiento en Desarrollo Fullstack y certificado experto en
   seguridad informática (OSCP, OSCE, OSWP, Hardware Security, Software Security, Usable Security).
-
-  <br><br>
+  </p>
+  <p>
   Pro-activo, eficiente y eficaz en la ejecución de proyectos, con extensa experiencia trabajando
   en grupos y entornos colaborativos.
-
-  A dictado numerosas conferencias en temas como programación de aplicaciones eficientes,
-  demostraciones en vivo de hacking a sistemas remotos, entre otros. Una de las más exitosas:
-  <em>“Paranoia, como sobrevivir a los peligros del Internet”</em>, demostraba en vivo el
-  proceso desde identificación de un objetivo, ingeniería social necesaria, hasta obtener
-  acceso total al servidor remoto. 
-
+  </p>
 </p>
