--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,17 +5,24 @@
     <!-- Content -->
 
     <article>
-      <header>
-        <h2>El Verdadero Ethical Hacking</h2>
-      </header>
-
-      <p>En <strong>GreyHat Security</strong> proveemos <%= link_to "Servicios", "/servicios" %> de pentesting 
-      con un enfoque educativo, donde nuestros clientes cuentan con capacitación en prevención y corrección, 
-      además de un informe detallado sobre los problemas encontrados en su plataforma. <br/> <br/>
-      Puede encontrar en la sección <%= link_to "Artículos", "/articulos" %> nuestro material audiovisual, publicaciones e investigaciones recientes. 
-       </p>
+      
+      <div style="height:10px"></div>
 
       <%=image_tag "new_main.jpg",style:"width:100%;border-radius:5px;" %>
+
+      <p>
+      En GreyHat, proveemos proveemos <%= link_to "servicios", "/servicios" %> de desarrollo de aplicaciones 
+      con un enfoque de seguridad aplicado desde la primera línea de código. Desde desarrollo y mantenimiento 
+      de back-ends en JAVA o RUBY, hasta la creación e integración de componentes React, asistencia en 
+      usabilidad y mejoras en UX/UI, entre otros. <br/> <br/>
+
+      Gracias a la experiencia Full-Stack y nuestras distintas certificaciones en seguridad informática, 
+      podemos analizar todo el flujo de una aplicación desde la presentación al usuario hasta la forma más
+      segura y eficiente para almacenar e interactuar con los datos. <br/> <br/>
+     
+      Puede encontrar en la sección <%= link_to "Artículos", "/articulos" %> nuestro material audiovisual, publicaciones e 
+      investigaciones recientes. 
+      </p>
 
       <header>
         <h2>Últimos artículos</h2>
@@ -49,25 +56,38 @@
   <div class="flex-small one-third">
 
     <section>
-      <h3>Conferencias &amp; Charlas</h3>
-      <p>Ofrecemos charlas gratuitas sobre técnicas de protección efectivas para las amenazas del día a día y el cómo implementar <a href="https://www.greyhat.cl/posts/como-mejorar-tu-seguridad-y-privacidad-en-linea-rapidamente">buenas prácticas</a> para nuestra vida digital, entre otros temas.</p>
-      <footer>
-        <%= link_to "Solicitud en línea", '/contacto', class: "button" %>
-      </footer>
+      <h3>Desarrollamos en</h3>
+      <p>
+      <ul>
+      <li>Ruby On Rails</li>
+      <li>JAVA Spring Boot</li>
+      <li>JAVA J2EE</li>
+      <li>React</li>
+      </li>
     </section>
 
     <section>
       <h3>Nuestros servicios</h3>
       <ul>
+        <li>Desarrollo Web Full-Stack</li>
+        <li>Mantenimiento Frontend y Backend</li>
         <li>Auditoría de Sistemas</li>
-        <li>WhiteBox/BlackBox</li>
+        <li>WhiteBox / BlackBox</li>
         <li>Pentesting y Ethical Hacking</li>
-        <li>Capacitación y Asesoría</li>
-        <li>Pruebas de Phishing</li>
       </ul>
-      <footer>
-        <%= link_to "Servicios", '/servicios', class: "button" %>
+    </section>
 
+    <section>
+      <h3>Plataformas</h3>
+      <ul>
+        <li>GNU/Linux en Digital Ocean</li>
+        <li>GCP / Azure / AWS / EC2</li>
+      </ul>
+    </section>
+
+    <section>
+      <footer>
+        <%= link_to "Contáctanos", '/contacto', class: "button" %>
       </footer>
     </section>
 
