--- a/app/assets/stylesheets/primitive/main.css
+++ b/app/assets/stylesheets/primitive/main.css
@@ -1165,3 +1165,9 @@ a.button:hover{
 #image_post img {
   width:100%;
 }
+
+#notice {
+  color:green;
+  font-weight: bold;
+  text-align:center;
+}
