--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
 <h1>Contacts</h1>
 
+<p><div><%= link_to "Clean Contacts", contacts_clean_url %></div></p>
+
 <table>
   <thead>
     <tr>
