--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -13,8 +13,8 @@
 <div class="flex-row">
   <div class="flex-small">
     <h3>Desarrollo de Aplicaciones</h3>
-    <p>Nuestras tecnologías favoritas son **Ruby on Rails** (PayPal, Cookpad, GitHub, Scribd, Shopify 
-    y Basecamp, entre otros), además de **JAVA** (eBay, Amazon, Oracle, LinkedIn, Google, Apple,
+    <p>Nuestras tecnologías favoritas son <strong>Ruby on Rails</strong> (PayPal, Cookpad, GitHub, Scribd, Shopify 
+    y Basecamp, entre otros), además de <strong>JAVA</strong> (eBay, Amazon, Oracle, LinkedIn, Google, Apple,
     y muchísimos otros). </p>
 
     <h3>Auditoría WhiteBox</h3>
