--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,12 @@
 <div class="medium-container">
 
   <article>
+
+    <% if user_signed_in? %>
+    Unique visitors: @post.unique_visitors
+    <% end %>
+
+
     <% if @post.image.attached? %>
     <div id="image_post"><%=image_tag url_for(@post.image), class:"image_post", style:"border-radius:5px;" %></div>
     <% end %>
@@ -67,6 +73,9 @@
   <meta name="twitter:creator" content="@greyhat_se">
   <meta name="twitter:title" content="<%= @post.title %>">
   <meta name="twitter:description" content="<%= @post.body.at(0..200) %>">
+  <% if @post.image.attached? %>
+  <meta name="twitter:image" content="https://greyhat.cl<%=url_for(@post.image)%>">
+  <% end %>
   <% if @post.image.attached? %>
   <meta name="twitter:image" content="https://greyhat.cl<%=url_for(@post.image)%>">
   <% end %>
