fix for unique visitors view

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
   <article>
 
     <% if user_signed_in? %>
-    Unique visitors: @post.unique_visitors
+    Unique visitors: <%= @post.unique_visits %>
     <% end %>
 
 
