total count visit

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -13,7 +13,7 @@
 <table>
   <tr>
     <td style="width:200px">Index</td>
-    <td><%= @statIndex %></td>
+    <td><%= Post.total_unique_visits %></td>
   </tr>
   <tr>
     <td>Acerca</td>
