--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="flex-row">
-  <div class="flex-small two-thirds ">
+  <div class="flex-small">
 
     <!-- Content -->
 
@@ -11,15 +11,13 @@
       <%=image_tag "new_main.jpg",style:"width:100%;border-radius:5px;" %>
 
       <p>
-      En GreyHat, proveemos proveemos <%= link_to "servicios", "/servicios" %> de desarrollo de aplicaciones 
-      con un enfoque de seguridad aplicado desde la primera línea de código. Desde desarrollo y mantenimiento 
-      de back-ends en JAVA o RUBY, hasta la creación e integración de componentes React, asistencia en 
-      usabilidad y mejoras en UX/UI, entre otros. <br/> <br/>
+      GreyHat en un portal de investigación y desarrollo enfocado en técnologías de la información,
+      crecimiento profesional y la necesidad elemental de crear un equilibro entre nuestra productividad
+      laboral y nuestra vida en general.<br/> <br/>
 
-      Gracias a la experiencia Full-Stack y nuestras distintas certificaciones en seguridad informática, 
-      podemos analizar todo el flujo de una aplicación desde la presentación al usuario hasta la forma más
-      segura y eficiente para almacenar e interactuar con los datos. <br/> <br/>
-     
+      Los artículos acá publicados surgen de libros que he leído recientemente, o investigaciones realizadas
+      en las últimas técnicas para lograr el mayor rendimiento con el menor esfuerzo. <br/> <br/>
+
       Puede encontrar en la sección <%= link_to "Artículos", "/articulos" %> nuestro material audiovisual, publicaciones e 
       investigaciones recientes. 
       </p>
@@ -53,16 +51,17 @@
 
     </article>
   </div>
+  <!--
   <div class="flex-small one-third">
 
     <section>
-      <h3>Desarrollamos en</h3>
+      <h3></h3>
       <p>
       <ul>
       <li>Ruby On Rails</li>
-      <li>JAVA Spring Boot</li>
-      <li>JAVA J2EE</li>
-      <li>React</li>
+      <li></li>
+      <li></li>
+      <li></li>
       </li>
     </section>
 
@@ -84,6 +83,6 @@
         <li>GCP / Azure / AWS / EC2</li>
       </ul>
     </section>
-
+    -->
   </div>
 </div>
