about information upadted

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,4 @@
-<h2>Acerca de</h2>
-
-
+<!--
 <p><strong>Greyhat</strong> surge con la visión de proveer servicios de desarrollo de aplicaciones 
 y Hacking Ético,  con herramientas que permitan a nuestros clientes  dar vida a sus ideas en 
 aplicaciones que puedan mantener y escalar, con la garantía de tener un producto seguro y confiable. </p>
@@ -9,20 +7,15 @@ aplicaciones que puedan mantener y escalar, con la garantía de tener un product
 lo que nos permite unificar un servicio de alto nivel en Hacking y Desarrollo así como capacitación y 
 transferencia de conocimiento. </p>
 
-<div class="flex-row vertical-center">
-  <%= image_tag  "oscp-acclaim.png", style:'width:120px' %>
-  <%= image_tag  "osce-acclaim.png", style:'width:120px' %>
-  <%= image_tag  "oswp-acclaim.png", style:'width:120px' %>
-  <%= image_tag  "oswe-acclaim.png", style:'width:120px' %>
-</div>
 
-<h2>Nosotros</h2>
+-->
+<h2>El Autor</h2>
 
 <p>
 
   <%= image_tag "0.jpg", style:"width:140px;border-radius:5px;margin-right:20px", align:'left' %>
-  <strong>Alex Barrios</strong> / <em>Fundador</em><br>
-  <a href="http://linkedin.com/in/alexbariv/" target="_blank"><%=fa_icon "linkedin"%></a>
+  <strong>Alex Barrios</strong>
+  <a href="http://linkedin.com/in/alexertech/" target="_blank"><%=fa_icon "linkedin"%></a>
   <p>
   Profesional con más de 15 años de experiencia en distintos campos de las tecnologías de
   información, con un sólido conocimiento en Desarrollo Fullstack y certificado experto en
@@ -32,4 +25,11 @@ transferencia de conocimiento. </p>
   Pro-activo, eficiente y eficaz en la ejecución de proyectos, con extensa experiencia trabajando
   en grupos y entornos colaborativos.
   </p>
+
+  <div class="flex-row vertical-center">
+  <%= image_tag  "oscp-acclaim.png", style:'width:120px' %>
+  <%= image_tag  "osce-acclaim.png", style:'width:120px' %>
+  <%= image_tag  "oswp-acclaim.png", style:'width:120px' %>
+  <%= image_tag  "oswe-acclaim.png", style:'width:120px' %>
+</div>
 </p>
