--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -10,7 +10,7 @@
 		<a href="/articulos">Articulos</a>
 	</li>
 	<li class="flex-small <%= current_page?('/acerca') ? @cur_html : '' %>"">
-		<a href="/acerca">Acerca</a>
+		<a href="/acerca">Acerca de</a>
 	</li>
 	<!--
 	<li class="flex-small <%= current_page?('/servicios') ? @cur_html : '' %>"">
